--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,2 +1,6 @@
-Francesco Apruzzese <support@coopenerp.it>
-Andrea Gallina <support@coopenerp.it>
+Francesco Apruzzese <f.apruzzese@coopenerp.it>
+Andrea Gallina <a.gallina@coopenerp.it>
+
+/* Bug and Fix */
+
+Alessandro Camilli <a.camilli@yahoo.it>
